--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,10 +46,15 @@ body {
     display: block;
 }
 
-#reaction-list > .reaction-item {
+.reaction-item {
+    cursor: pointer;
     border: 1px solid #ccc;
     border-radius: 8px;
     padding: 15px;
     margin-bottom: 15px;
     background-color: #f9f9f9;
+}
+
+.reaction-item:hover {
+    background-color: #eee;
 }
