--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,41 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <title>ChemPrompter</title>
-</head>
-<body>
-    <div class="sidebar">
-        <h2>ChemPrompter</h2>
-        <ul>
-            <li onclick="showContent('browse-tab')">浏览</li>
-            <li onclick="showContent('edit-tab')">编辑</li>
-            <li onclick="showContent('settings-tab')">设置</li>
-        </ul>
-    </div>
-    <div id="browse-tab" class="content active">
-        <h1>所有反应</h1>
-        <p>Here may goes a scroll list of reactions</p>
-        <div id="reaction-list">
-            <% reactions.forEach(reaction => { %>
-                <div class="reaction-item">
-                    <h3><%= reaction.name %></h3>
-                    <p>Substrates: <%= reaction.substrates %></p>
-                    <p>Products: <%= reaction.products %></p>
-                </div>
-            <% }) %>
-        </div>
-    </div>
-    <div id="edit-tab" class="content">
-        <h1>反应信息</h1>
-        <p>这里大概能编辑一个反应的信息 反应物 条件 记录/计算投料比</p>
-    </div>
-    <div id="settings-tab" class="content">
-        <h1>设置</h1>
-        <p>有啥可设置的呢</p>
-    </div>
-
     <script>
-        function showContent(id) {
+        function switchTab(id) {
             const contents = document.querySelectorAll('.content');
             contents.forEach(content => {
                 content.classList.remove('active');
@@ -47,5 +14,32 @@
             document.getElementById(id).classList.add('active');
         }
     </script>
+    <script src="/js/reactions.js"></script>
+    <script src="/js/render.js"></script>
+    <title>ChemPrompter</title>
+</head>
+<body>
+    <div class="sidebar">
+        <h2>ChemPrompter</h2>
+        <ul>
+            <li onclick="switchTab('browse-tab')">浏览</li>
+            <li onclick="switchTab('reaction-tab')">反应</li>
+            <li onclick="switchTab('settings-tab')">设置</li>
+        </ul>
+    </div>
+    <div id="browse-tab" class="content active">
+        <h1>所有反应</h1>
+        <p>Here may goes a scroll list of reactions</p>
+        <div id="reaction-list">
+        </div>
+    </div>
+    <div id="reaction-tab" class="content">
+        <h1>反应信息</h1>
+        <div id="reaction-info">选择一个反应来展示</div>
+    </div>
+    <div id="settings-tab" class="content">
+        <h1>设置</h1>
+        <p>有啥可设置的呢</p>
+    </div>
 </body>
 </html>
