--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,9 +52,25 @@ body {
     border-radius: 8px;
     padding: 15px;
     margin-bottom: 15px;
+    margin-right: 20px;
     background-color: #f9f9f9;
 }
 
 .reaction-item:hover {
+    background-color: #eee;
+}
+
+button {
+    cursor: pointer;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    padding: 15px 15px;
+    margin: 10px;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+button:hover {
     background-color: #eee;
 }
