--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,10 +39,6 @@ body {
     padding: 20px;
     width: 100%;
     box-sizing: border-box;
-    display: none;
-}
-
-.content.active {
     display: block;
 }
 
@@ -50,7 +46,7 @@ body {
     cursor: pointer;
     border: 1px solid #ccc;
     border-radius: 8px;
-    padding: 15px;
+    padding: 0px 15px;
     margin-bottom: 15px;
     margin-right: 20px;
     background-color: #f9f9f9;
@@ -60,13 +56,40 @@ body {
     background-color: #eee;
 }
 
+.info-item {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 0px 15px;
+    margin-bottom: 15px;
+    margin-right: 20px;
+    background-color: #f9f9f9;
+}
+
+.form-item {
+    display: grid;
+    grid-template-columns: 40px 1fr;
+
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 10px 15px;
+    margin-bottom: 15px;
+    margin-right: 20px;
+    background-color: #f9f9f9;
+}
+
+.form-item input {
+    margin-left: 15px;
+    font-size: large;
+}
+
 button {
     cursor: pointer;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #f9f9f9;
-    padding: 15px 15px;
-    margin: 10px;
+    padding: 10px 15px;
+    margin-bottom: 15px;
+    margin-right: 10px;
     font-size: 16px;
     transition: background-color 0.3s;
 }
