--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,16 +14,14 @@
             document.getElementById(id).classList.add('active');
         }
     </script>
-    <script src="/js/reactions.js"></script>
-    <script src="/js/render.js"></script>
     <title>ChemPrompter</title>
 </head>
 <body>
     <div class="sidebar">
         <h2>ChemPrompter</h2>
         <ul>
-            <li onclick="switchTab('browse-tab')">浏览</li>
-            <li onclick="switchTab('reaction-tab')">反应</li>
-            <li onclick="switchTab('settings-tab')">设置</li>
+            <li onclick="window.location.href='/'">浏览</li>
+            <li onclick="window.location.href='/detail'">详情</li>
+            <li onclick="window.location.href='/settings'">设置</li>
         </ul>
     </div>
