--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,7 +2,7 @@
     <div id="edit-tab" class="content">
         <h1>编辑反应</h1>
         <button onclick="save()">保存</button>
-        <button onclick="save(true)">保存并关闭</button>
+        <button onclick="save(true)" style="color: darkgreen;">保存并关闭</button>
         <button onclick="leave()" style="color: brown;">关闭</button>
         <div id="reaction-form">
             <div class="form-item">
