--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,7 @@ body {
 .info-item {
     border: 1px solid #ccc;
     border-radius: 8px;
-    padding: 0px 15px;
+    padding: 15px;
     margin-bottom: 15px;
     margin-right: 20px;
     background-color: #f9f9f9;
@@ -77,7 +77,7 @@ body {
     background-color: #f9f9f9;
 }
 
-.form-item input {
+.form-item > input {
     margin-left: 15px;
     font-size: large;
 }
@@ -96,4 +96,41 @@ button {
 
 button:hover {
     background-color: #eee;
+}
+
+#reaction-form table,
+#reaction-info table {      
+    column-width: auto;
+    border-collapse: collapse;
+    display: block;
+}
+#reaction-form th,
+#reaction-form td,
+#reaction-info th,
+#reaction-info td {
+    border: 1px solid #ddd;
+    padding: 4px;
+    width: 2%;
+    text-align: center;
+}
+#reaction-form th,
+#reaction-info th {
+    /* font-size: 10px; */
+    background-color: #f2f2f2;
+}
+#reaction-form td input[type="text"],
+#reaction-form td input[type="number"] {
+    width: 100%; /* Adjust input width */
+    box-sizing: border-box; /* Ensure input width includes padding */
+}
+#reaction-form button.small-button {
+    padding: 2px;
+    margin: 2px;
+}
+
+#jsme_container {
+    /* float: left; */
+    margin: 15px;
+    margin-left: 0px;
+    display: block;
 }
